--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,7 @@ spring.devtools.livereload.enabled=true
 spring.devtools.art.enabled=true
 
 spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521:orcl
 spring.datasource.url=jdbc:log4jdbc:oracle:thin:@192.168.0.40:49161:xe
 spring.datasource.username=final900
 spring.datasource.password=1234
