--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,11 @@ logging.level.com.javalab=DEBUG
 spring.jackson.serialization.indent_output=true
 spring.jackson.deserialization.fail_on_unknown_properties=false
 
-spring.thymeleaf.prefix=file:src/main/resources/templates/
-spring.resources.static-locations=file:src/main/resources/static/
+#spring.thymeleaf.prefix=file:src/main/resources/templates/
+spring.thymeleaf.prefix=classpath:/templates/
+#spring.resources.static-locations=file:src/main/resources/static/
+spring.resources.static-locations=classpath:/static/
+
 
 
 # DevTools+# \uBE0C\uB77C\uC6B0\uC800 \uC790\uB3D9 \uB9AC\uB85C\uB4DC(\uBE0C\uB77C\uC6B0\uC800 \uD655\uC7A5 \uD504\uB85C\uADF8\uB7A8 \uC124\uCE58 \uD544\uC694)
