--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -81,6 +81,10 @@ com.javalab.boot.upload.path=C:\\filetest\\upload
 #spring.mvc.static-path-pattern=/resources/**
 file.dir=C:/upload
 
+spring.mvc.static-path-pattern=/**
+spring.web.resources.static-locations=classpath:/static/
+
+
 # \uC5B4\uD50C\uB9AC\uCF00\uC774\uC158\uC758 url \uC694\uCCAD\uACFC \uB9E4\uD551\uB418\uC5B4 \uC788\uB294 \uD578\uB4E4\uB7EC \uC815\uBCF4 display
 # \uC2DC\uD050\uB9AC\uD2F0 \uB85C\uADF8 trace
 #logging.level.org.springframework.security=TRACE
